// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BootStrapSpinnerBorder test 1`] = `
<div
  className="spinner-border text-primary  m-5 "
  role="status"
>
  <span
    className="visually-hidden"
  >
    Loading...
  </span>
</div>
`;

exports[`BootStrapSpinners test 1`] = `
<div
  className="spinner-border spinner-border-sm  text-primary "
  role="status"
>
  <span
    className="visually-hidden"
  >
    Loading...
  </span>
</div>
`;

exports[`Default LoaderTest 1`] = `
<tr
  className="tr-loading"
>
  <td
    colSpan={2}
  >
    <div
      style={
        {
          "textAlign": "center",
        }
      }
    >
      <img
        alt="Loading..."
        src=""
        style={
          {
            "height": "70px",
            "width": "100px",
          }
        }
      />
    </div>
  </td>
</tr>
`;
